--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>💚 Andri's Personal Site</title>
-  </head>
-  <body>
-<h1>Andri Reichenbacher</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>💚 Andri's Personal Site</title>
+
+  <style>
+    body {
+      background-color: #EAF6F6;      
+    }
+
+    hr {
+      background-color: white;
+      border-style: none;
+    }
+
+  </style>
+
+</head>
+
+<body>
+  <table>
+    <tr>
+      <td><img src="images/andri.png" alt="andri profile picture"></td>
+      <td>
+        <h1>Andri Reichenbacher</h1>
+        <p><em>Founder and CEO of <strong><a href="https://www.appbrewery.co">The App Brewery</a></strong></em></p>
+        <p>I am an iOS and Web Developer. I 💚 coffee and brew my own beers.</p>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <h3>Books ans Teaching</h3>
+  <ul>
+    <li>The complete iOS App Development Boocamp</li>
+    <li>The complete Web Development Boocamp</li>
+  </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <tr>
+      <th>Date</th>
+      <th>Work</th>
+    </tr>
+    <tr>
+      <td>2009-2010</td>
+      <td>Researcher at the Institute of Cognitive Neurosciences</td>
+    </tr>
+    <tr>
+      <td>2010-2013</td>
+      <td>Lead Developer Tempo App</td>
+    </tr>
+    <tr>
+      <td>iOS Development</td>
+      <td>******</td>
+    </tr>
+    <tr>
+      <td>2013-2015</td>
+      <td>Clinical Doctor at the National Health Service</td>
+    </tr>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>iOS Development</td>
+      <td>******</td>
+    </tr>
+    <tr>
+      <td>Web Development</td>
+      <td>***</td>
+    </tr>
+  </table>
+  <hr>
+  <a href="Hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">Contact Me</a>
+</body>
+
 </html>
