--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>💚 Andri's Personal Site</title>
-
-  <style>
-    body {
-      background-color: #EAF6F6;      
-    }
-
-    hr {
-      background-color: white;
-      border-style: none;
-    }
-
-  </style>
+  <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
