--- a/index_excercise1.html
+++ b/index_excercise1.html
@@ -15,7 +15,7 @@
         <td>Two</td>
       </tr>
       <tr>
-        <td>Three</td>
+        <td>Three 💚 </td>
         <td>Four</td>
       </tr>
     </table>
